--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-heading text-uppercase">Kitutes Donatê</div>
+                <div class="masthead-heading text-uppercase">Kitutes Alisson</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://api.whatsapp.com/send?phone=551195555-55550&text=Oi%20quero%20encomendar%20100%20produtos" target="_blank">Encomendar</a>
             </div>
         </header>
